[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hw4_rl"
version = "0.1.0"
description = "HW4-RL: Reinforcement Learning Implementation"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "numpy",
    "matplotlib",
    "gymnasium",
    "scipy",
] 